new section added

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <!-- ====================================================================
-                                Navbar part start
+                                Navbar part html start
     ========================================================================= -->
     <section id="navbar_part">
       <nav class="navbar navbar-expand-lg">
@@ -62,8 +62,9 @@
 
               <div class="view_pricing">
                 <a href="#" class="d-flex align-items-center ps-5"
-                  >View Pricing <i class="fa-solid fa-arrow-right-long ps-2"></i
-                ></a>
+                  >View Pricing
+                  <i class="fa-solid fa-arrow-right-long ps-2 pt-1"></i>
+                </a>
               </div>
             </div>
           </div>
@@ -71,7 +72,11 @@
           <div class="col-lg-6">
             <div class="banner_img">
               <picture>
-                <img src="./images/banner.png" alt="banner.png" />
+                <img
+                  src="./images/banner.png"
+                  alt="banner.png"
+                  class="img-fluid"
+                />
               </picture>
             </div>
           </div>
@@ -80,15 +85,175 @@
     </section>
 
     <!-- ====================================================================
-                                Navbar part ends
+                                Navbar part html ends
     ========================================================================= -->
 
     <!-- ====================================================================
-                                Work part Starts
+                                Work part html Starts
+    ========================================================================= -->
+
+    <!-- pe-lg-4 refers the end line of a paragraph shifts from right at 4rem for large device -->
+
+    <section id="work_part">
+      <div class="container p-0">
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="work_part_left_text">
+              <h2 class="pt-lg-2">How we work</h2>
+              <p class="pt-lg-3 pe-lg-4">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor.
+              </p>
+              <div class="d-flex align-items-center pt-3">
+                <a href="#">Get in touch with us</a>
+                <i class="fa-solid fa-arrow-right-long ps-3"></i>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="row g-4">
+              <div class="col-lg-6">
+                <div class="strategy p-3">
+                  <picture>
+                    <img
+                      src="./images/pointer1.png"
+                      alt="pointer1.png"
+                      title="pointer one"
+                      class="img-fluid"
+                    />
+                  </picture>
+                  <h2 class="mt-lg-3">Strategy</h2>
+                  <p class="pt-lg-3">
+                    Euismod faucibus turpis eu gravida <br />
+                    mi. Pellentesque et velit aliquam .
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="strategy p-3">
+                  <picture>
+                    <img
+                      src="./images/pointer2.png"
+                      alt="pointer2.png"
+                      title="pointer two"
+                      class="img-fluid"
+                    />
+                  </picture>
+                  <h2 class="mt-lg-3">Wireframing</h2>
+                  <p class="pt-lg-3">
+                    Euismod faucibus turpis eu gravida <br />
+                    mi. Pellentesque et velit aliquam .
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="strategy p-3">
+                  <picture>
+                    <img
+                      src="./images/pointer3.png"
+                      alt="pointer3.png"
+                      title="pointer three"
+                      class="img-fluid"
+                    />
+                  </picture>
+                  <h2 class="mt-lg-3">Design</h2>
+                  <p class="pt-lg-3">
+                    Euismod faucibus turpis eu gravidabr <br />
+                    mi. Pellentesque et velit aliquam .
+                  </p>
+                </div>
+              </div>
+              <div class="col-lg-6">
+                <div class="strategy p-3">
+                  <picture>
+                    <img
+                      src="./images/pointer4.png"
+                      alt="pointer4.png"
+                      title="pointer four"
+                      class="img-fluid"
+                    />
+                  </picture>
+                  <h2 class="mt-lg-3">Development</h2>
+                  <p class="pt-lg-3">
+                    Euismod faucibus turpis eu gravida <br />
+                    mi. Pellentesque et velit aliquam .
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ====================================================================
+                                Work part html ends
     ========================================================================= -->
 
     <!-- ====================================================================
-                                Work part ends
+                                View project part html starts
+    ========================================================================= -->
+    <section id="view_project_part" class="mb-lg-5">
+      <div class="container p-0">
+        <div class="head_text">
+          <div class="row">
+            <div class="col-lg-6">
+              <h2>View our projects</h2>
+            </div>
+            <div class="col-lg-6">
+              <div class="d-flex align-items-center pt-3">
+                <a href="#">View More</a>
+                <i class="fa-solid fa-arrow-right-long ps-3"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-8">
+            <div class="big_image">
+              <picture>
+                <img
+                  src="./images/card1.jpg"
+                  alt="card1.jpg"
+                  class="img-fluid w-100"
+                />
+              </picture>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="row">
+              <div class="col-lg-12 mb-lg-4">
+                <div class="small_image1">
+                  <picture>
+                    <img
+                      src="./images/card2.jpg"
+                      alt="card2.jpg"
+                      class="img-fluid"
+                    />
+                  </picture>
+                </div>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="small_image2">
+                  <picture>
+                    <img
+                      src="./images/Card3.jpg"
+                      alt="Card3.jpg"
+                      class="img-fluid"
+                    />
+                  </picture>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ====================================================================
+                                View project part html ends
     ========================================================================= -->
 
     <script src="./js/main.js"></script>
